Update Lineaer_afbilding.tex, linear_uafhangighed.tex, and 3 more files...

--- a/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
+++ b/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
@@ -9,9 +9,9 @@ En mængde af vektorer i $\R^n$ kan være \textbf{lineært afhængige} eller \te
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 
 \begin{defn}{Lineær afhængighed og lineær uafhængighed}{}
-En mængde af vektorer $\mathbf{v}_1, \mathbf{v}_2, \ldots , \mathbf{v}_k \in \R^n$ kaldes lineært uafhængige, hvis der eksisterer skalarer $x_1, x_2, \ldots , x_k$, sådan at ligningen 
+En mængde af vektorer $\mathbf{u}_1, \mathbf{u}_2, \ldots , \mathbf{u}_k \in \R^n$ kaldes lineært uafhængige, hvis der eksisterer skalarer $x_1, x_2, \ldots , x_k$, sådan at ligningen 
 \begin{align*}
-x_1\mathbf{v}_1 + x_2\mathbf{v}_2 + \cdots + x_k \mathbf{v}_k = \mathbf{0}, 
+x_1\mathbf{u}_1 + x_2\mathbf{u}_2 + \cdots + x_k \mathbf{u}_k = \mathbf{0}, 
 \end{align*}
 kun har den trivielle løsning $x_1 = x_2 = \cdots = x_k = 0$.
 \\
@@ -224,7 +224,7 @@ er en løsning anderledes fra den trivielle løsning, hvor $x_1, x_2,\ldots,x_k=
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-Det kan i nogle tilfælde afgøres ved inspektion, hvorvidt en mængde vektorer $\mathbf{v},\mathbf{v}_2,\ldots ,\mathbf{v}_k$ er lineært afhængige. 
+Det kan i nogle tilfælde afgøres ved inspektion, hvorvidt en mængde vektorer $\mathbf{u},\mathbf{u}_2,\ldots ,\mathbf{u}_k$ er lineært afhængige. 
 Jævnfør sætning \ref{thm:inspektion} er mængden af vektorer afhængige, hvis $\mathbf{0}$ er en af dem, hvis to af vektorerne er parallelle, eller hvis der er flere vektorer end hver vektors antal af koordinater. 
 Med udgangspunkt i eksempel \ref{fisk} ses det, at de to vektorer i $\S_2$ er parallelle og derfor er lineært afhængige. 
 \\\\
