--- a/incl/main/linear_algebra/matricer_vektorer/linearkom.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/linearkom.tex
@@ -25,21 +25,21 @@ En linearkombination af én vektor er blot en skalering af vektoren.
 \begin{eks}
 Lad 
 $$
-\textbf{a}=
+\textbf{u}=
 \begin{bmatrix}
 5 \\
 9 \\
 4
 \end{bmatrix}
 \text{, }
-\textbf{b}=
+\textbf{v}=
 \begin{bmatrix}
 8  \\
 12 \\ 
 3
 \end{bmatrix}
 \text{og }
-\textbf{c}=
+\textbf{w}=
 \begin{bmatrix}
 0 \\
 0 \\
@@ -83,7 +83,7 @@ $$
 %
 Enhver vektor 
 \begin{align*}
-\textbf{a}=
+\textbf{u}=
 \begin{bmatrix}
 a_1 \\
 a_2 \\
