--- a/incl/main/linear_algebra/matricer_vektorer/matricer.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/matricer.tex
@@ -34,7 +34,7 @@ $$
 Enhver række $i$ eller søjle $j$ kan betragtes som en \textbf{vektor}. 
 En matrix med én række kaldes en \textbf{rækkevektor}, og en matrix med én søjle kaldes en \textbf{søjlevektor}. 
 Med mindre andet er angivet opereres der med søjlevektorer.
-I denne rapport noteres vektorer med små, fede bogstaver, såsom $\textbf{a}$ og $\textbf{b}$. 
+I denne rapport noteres vektorer med små, fede bogstaver, såsom $\textbf{u}$ og $\textbf{v}$. 
 Søjlevektorer noteres ofte med et indeks tilsvarende søjlen i matricen, eksempelvis:
 %
 $$
