--- a/incl/main/linear_algebra/span/span.tex
+++ b/incl/main/linear_algebra/span/span.tex
@@ -130,7 +130,7 @@ Dette gøres ved at undersøge om en vektor kan konstrueres som linearkombinatio
 %
 \begin{eks}
 %
-Det skal undersøges, hvorvidt vektor $\mathbf{v}$ er i spannet for $\S_1$. 
+Det skal undersøges, hvorvidt vektor $\mathbf{u}$ er i spannet for $\S_1$. 
 Givet
 \begin{align*}
 \mathbf{v}= \begin{bmatrix}
