--- a/incl/main/linear_algebra/Lineaer_afbilding.tex
+++ b/incl/main/linear_algebra/Lineaer_afbilding.tex
@@ -4,11 +4,11 @@ En matrix kan betragtes som en funktion, der afbilder en vektor i et rum.
 %
 \begin{defn}{}{}
 Lad $\S _1 \subset \R^n$ og $\S _2 \subset \R^m$.
-En funktion $f$ fra $\S_1$ til $\S_2$, noteret $f:\S_1\rightarrow\S_2$, tildeler enhver vektor $\textbf{v}$ i $\S_1$ en entydig vektor $f(\textbf{v})$ i $\S_2$.
-Vektoren $f(\textbf{v})$ kaldes en \textbf{afbildning} af $\textbf{v}$.
+En funktion $f$ fra $\S_1$ til $\S_2$, noteret $f:\S_1\rightarrow\S_2$, tildeler enhver vektor $\textbf{u}$ i $\S_1$ en entydig vektor $f(\textbf{u})$ i $\S_2$.
+Vektoren $f(\textbf{u})$ kaldes en \textbf{afbildning} af $\textbf{v}$.
 %Hedder det codomænet på dansk? Lyder underligt. 
 $\S_1$ er \textbf{domænet} for funktionen $f$, mens $\S_2$ kaldes \textbf{codomænet} til $f$.
-\textbf{Værdimængden} for $f$ er defineret som mængden af afbildninger $f(\textbf{v})$ for alle $\textbf{v}\in \S_1$.
+\textbf{Værdimængden} for $f$ er defineret som mængden af afbildninger $f(\textbf{u})$ for alle $\textbf{v}\in \S_1$.
 \end{defn}\noindent
 %
 På figur \ref{fig:afbild} ses, at både $\textbf{u}$ og $\textbf{v}$ har $\textbf{w}$ som afbildning, da $f(\textbf{u})=f(\textbf{v})=\textbf{w}$.
