Update gauss_elimination.tex, mxsum.tex, and mxtrans.tex

--- a/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination.tex
+++ b/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination.tex
@@ -3,7 +3,7 @@
 % 1.4
 % Sætning 1.4 kan vi bevise den
 En algoritme til løsning af lineære ligningssystemer er  \textbf{rækkereduktionsalgoritmen}, som reducerer en totalmatrix til reduceret trappeform.
-Når den bruges til at løse lineære ligningssystemer, kaldes denne process for \textbf{Gauss-elimination}.
+Når den bruges til at løse lineære ligningssystemer, kaldes denne proces for \textbf{Gauss-elimination}.
 I algoritmen bruges de elementære rækkeoperationer til at omdanne en matrix $A$ til trappeform. 
 Herefter benyttes rækkeoperationerne til at reducere matricen til reduceret trappeform.
 Algoritmen gennemgår således følgende skridt:
