--- a/incl/main/linear_algebra/matricer_vektorer/mxtrans.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxtrans.tex
@@ -63,22 +63,22 @@ A^T =
 Sætning \ref{thm:mxtranspo} viser, at transponering bevarer summering og skalering af matricer.
 %
 \begin{thm}{}{mxtranspo}
-Lad $A$ og $B$ være $m \times n$ matricer, og lad $k$ være en skalar.
+Lad $A$ og $B$ være $m \times n$ matricer, og lad $c$ være en skalar.
 Så har matricerne følgende egenskaber:
 \begin{enumerate}[label=(\alph*)]
 \item $(A + B)^T = A^T + B^T$.
-\item $(kA)^T = kA^T$.
+\item $(cA)^T = cA^T$.
 \item $(A^T)^T = A$.
 \end{enumerate}
 \end{thm}
 %
 \begin{proof}
-Lad $A$ og $B$ være $m \times n$ matricer og lad $k$ være en skalar.
+Lad $A$ og $B$ være $m \times n$ matricer og lad $c$ være en skalar.
 Det vides, at indgangene i $A+B$ er $a_{i,j} + b_{i,j}$, og transponeringen af dette resulterer i en $n \times m$ matrix med indgangende $a_{j,i} + b_{j,i}$.
 Det ses, at  $A^T + B^T$ også er en $n \times m$ matrix med indgangene $a_{i,j} + b_{i,j}$, hvilket beviser (a).
 Ved skalering og transponering af en matrix ses, at opperationernes rækkefølge er uden betydning for slutresultatet.
-Dette tydeliggøres ved at betragte $kA^T$ og $(kA)^T$.
-For $kA^T$ er indgangene $ka_{j,i}$, og indgangene i $kA$ er $ka_{i,j}$, som efter transponering er $ka_{j,i}$, hvilket beviser (b).
+Dette tydeliggøres ved at betragte $cA^T$ og $(cA)^T$.
+For $cA^T$ er indgangene $ca_{j,i}$, og indgangene i $cA$ er $ca_{i,j}$, som efter transponering er $ca_{j,i}$, hvilket beviser (b).
 Transponeres $A$ to gange vil resultatet være $A$.
 Første transponering resulterer i en $n \times m$ matrix med indgangene $a_{j,i}$ og anden transponering resulterer i en $m \times n$ matrix med indgangene $a_{i,j}$, hvilket beviser (c).
 \end{proof}
