--- a/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
@@ -8,8 +8,8 @@ Lad $A$ og $B$ være $m \times n$ matricer.
 Summen af $A$ og $B$ er $m \times n$ matricen $A + B$, hvor den $(i,j)$'te indgang er $a_{i,j} + b_{i,j}$.
 Ligeledes er subtraktion mellem matricerne $A$ og $B$ muligt, og indgangene i den resulterende matrix er $a_{i,j} - b_{i,j}$.
 \\
-Lad nu $k$ være en skalar.
-Skalering, også kaldet skalarmultiplikation, af $A$, noteret $kA$, er en $m \times n$ matrix, hvor den $(i,j)$'te indgang er $ka_{i,j}$.
+Lad nu $c$ være en skalar.
+Skalering, også kaldet skalarmultiplikation, af $A$, noteret $cA$, er en $m \times n$ matrix, hvor den $(i,j)$'te indgang er $ca_{i,j}$.
 \end{defn}
 \noindent
 %
@@ -68,30 +68,30 @@ og
 Ud fra disse operationer har matricer en række egenskaber, som ses i sætning \ref{thm:mxprop}.
 %Nedenstående definition er ordret den samme som i bogen (s. 6), men vi kan jo nærmest ikke skrive den og lignende sætninger anderledes; skal vi ikke bare lige vende det med Horia, tror I? 
 \begin{thm}{}{mxprop}
-Lad $A$, $B$ og $C$ være $m \times n$ matricer, og lad $k$ og $s$ være skalarer.
+Lad $A$, $B$ og $C$ være $m \times n$ matricer, og lad $c$ og $k$ være skalarer.
 Så har matricer følgende egenskaber:
 \begin{enumerate}[label=(\alph*)]
 \item $A + B = B + A$.
 \item $(A + B) + C = A + (B + C)$.
 \item $A + O = A$.
 \item $A + (-A) = O$.
-\item $(ks)A = s(kA)$.
-\item $k(A + B) = kA + kB$.
-\item $(k + s)A = kA + sA$.
+\item $(ck)A = k(cA)$.
+\item $c(A + B) = cA + cB$.
+\item $(c + k)A = cA + kA$.
 \end{enumerate}
 \end{thm}
 %
 \begin{proof}
-Lad $A$, $B$ og $C$ være $m \times n$ matricer, og lad $k$ og $s$ være skalarer.
+Lad $A$, $B$ og $C$ være $m \times n$ matricer, og lad $c$ og $k$ være skalarer.
 Betragt $A + B$ og $B + A$ og bemærk jævnfør definition \ref{defn:mxsum}, at de $(i,j)$'te indgange bliver henholdsvis $a_{i,j} + b_{i,j}$ og $b_{i,j} + a_{i,j}$, hvilket beviser (a).
 Ligeledes ses det, at $(a_{i,j} + b_{i,j}) + c_{i,j} = a_{i,j} + (b_{i,j} + c_{i,j})$, hvilket beviser (b).
 Endvidere kan $0$ isoleres i $a_{i,j} + 0 = a_{i,j}$, således $a_{i,j} + (-a_{i,j}) = 0$, hvilket beviser (c) og (d), da alle indgange i en nulmatrix er $0$.
 \\\\
 %
-Betragt skaleringen af $A$ med skalaren $ks$, som er et produkt af skalarene $k$ og $s$, og skaleringen af $A$ med $k$ og herefter $s$.
-For indgangene i disse skaleringer findes ligheden $(ks)a_{i,j} = s(ka_{i,j})$, hvilket beviser (e).
-Betragt ligeledes (f) og bemærk, at $k(a_{i,j} + b_{i,j}) = ka_{i,j} + kb_{i,j}$, hvilket beviser (f).
-Det samme gøres for ligheden i (g), hvor ligheden $(k + s)a_{i,j} = ka_{i,j} + sa_{i,j}$ opstilles, hvilket beviser (g).
+Betragt skaleringen af $A$ med skalaren $ck$, som er et produkt af skalarene $c$ og $k$, og skaleringen af $A$ med $c$ og herefter $k$.
+For indgangene i disse skaleringer findes ligheden $(ck)a_{i,j} = k(ca_{i,j})$, hvilket beviser (e).
+Betragt ligeledes (f) og bemærk, at $c(a_{i,j} + b_{i,j}) = ca_{i,j} + cb_{i,j}$, hvilket beviser (f).
+Det samme gøres for ligheden i (g), hvor ligheden $(c + k)a_{i,j} = ca_{i,j} + ka_{i,j}$ opstilles, hvilket beviser (g).
 \end{proof}
 \noindent
 \\
