Update linear_algebra.tex, dim.tex, and under_bas_dim.tex

--- a/incl/main/linear_algebra/linear_algebra.tex
+++ b/incl/main/linear_algebra/linear_algebra.tex
@@ -25,3 +25,5 @@
 	\input{incl/main/linear_algebra/invertibilitet}
 	% Underrum
 	\input{incl/main/linear_algebra/span/under_bas_dim}
+	\input{incl/main/linear_algebra/span/dim}
+	
