Update lineare_ligningssystemer.tex, loesning_til_lineaer.tex, and standardform.tex

--- a/incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer.tex
+++ b/incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer.tex
@@ -33,7 +33,7 @@ i $\R ^n$, således at alle ligninger er opfyldt, når $x_i$ erstattes med $s_i$
 %
 \\
 \begin{eks}
-\label{ekslignsys}
+\label{eks:lignsys}
 Understående er et lineært ligningssystem, bestående af tre ligninger.
 %
 \begin{align*}
@@ -87,7 +87,13 @@ A kaldes for \textbf{koefficientmatricen}.
 %efter hårdt sammenleje bliver A matricen og b til totalmatricen
 \textbf{Totalmatrixen} $[A \text{    } | \mathbf{b}]$ dannes ved at kombinere koefficientmatricen med vektoren \textbf{b}.
 Totalmatrixen indeholder alle informationer, der skal bruges til at løse et lineært ligningssystem.
-Ligningssystemet fra eksempel \ref{ekslignsys} skrives som totalmatricen
+En matrixligning kan også opskrives ved
+%
+\begin{align*}
+\sum^n_{i=1}{A_ix_i}=\textbf{b}.
+\end{align*}
+%
+Ligningssystemet fra eksempel \ref{eks:lignsys} skrives som totalmatricen
 \begin{equation*}
   A=
 \begin{blockarray}{cccccc}
