--- a/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
+++ b/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
@@ -144,7 +144,7 @@ Den reducerede trappeform af en matrix $A$ noteres  $R$. Et lineært ligningssys
 Metoden til at gøre dette ses i afsnit \ref{gauss}.
 \\
 %
-\begin{eks}\label{trappe}
+\begin{eks}\label{eks:trappe}
 Betragt matricen $A$.
 \begin{align*}
 A=
@@ -161,6 +161,16 @@ A=
 Jævnfør definition \ref{defn:redtrap} er $A$ på reduceret trappeform.
 \end{eks}
 %
+%Motiverende tekst
+%
+\begin{thm}{}{}
+Enhver matrix kan, ved hjælp af elementære rækkeoperationer, kun blive omdannet til en entydig matrix på reduceret trappeform.
+\end{thm}
+%
+\begin{proof}
+Lav - se Appendix E i bogen
+\end{proof}
+%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \subsection{Pivotindgange}
@@ -168,34 +178,51 @@ Jævnfør definition \ref{defn:redtrap} er $A$ på reduceret trappeform.
 \textbf{Pivotindgange} betegnes som den første ikke-nulindgang i enhver række i en matrix på trappeform. 
 \end{defn}
 \noindent
-Pivot indgange vil fremover blive markeret med blå, som set i eksempel \ref{eks:pivot}. Dette vil blive gjort første gang en matrice bliver lavet til trappeform eller reduceret trappeform.
-\begin{eks}{}{eks:pivot}
-Betragt eksempel \ref{trappe}. Det ses, at ligningssystemet ikke har nogen løsning, da den fjerde ligning ikke har nogen løsning.\\
-\begin{minipage}{0.5\textwidth}
+\begin{eks}\label{eks:pivot}
+Betragt matrix $A$ fra eksempel \ref{eks:trappe}. Pivotindgangene i $A$ er her markeret med blåt.
 %
 \begin{align*}
 A=
-\begin{blockarray}{ccccc}
-x_1 & x_2 & x_3 & x_4 & b \\
-\begin{block}{[cccc|c]}
-\hlight{1} & 0 & 5 & 0 & 0\\
-0 & \hlight{1} & 3 & 0 & 0\\
-0 & 0 & 0 & \hlight{1} & 0\\
-0 & 0 & 0 & 0 & \hlight{1}\\
+\begin{blockarray}{cccc}
+\begin{block}{[ccc|c]}
+\hlight{2}	& 4			& 8			& 2\\
+0			& \hlight{5}& -2		& 5\\
+0			& 0			& \hlight{2}& 7\\
+0			& 0			& 0			& 0\\
 \end{block}
 \end{blockarray}.
 \end{align*}
-\end{minipage}
-\begin{minipage}{0.5\textwidth}
-\begin{align*}
-x_1+5x_3&=0\\
-x_2+3x_3&=0\\
-x_4&=0\\
-0&=1
-\end{align*}
-\end{minipage}
 %
 \end{eks}
+Pivot indgange vil fremover blive markeret med blå, som set i eksempel \ref{eks:pivot}.
+Dette vil blive gjort første gang en matrice bliver lavet til trappeform eller reduceret trappeform.
+%\begin{eks}\label{eks:pivot}
+%Betragt eksempel \ref{trappe}. Det ses, at ligningssystemet ikke har nogen løsning, da den fjerde ligning ikke har nogen løsning.\\
+%\begin{minipage}{0.5\textwidth}
+%%
+%\begin{align*}
+%A=
+%\begin{blockarray}{ccccc}
+%x_1 & x_2 & x_3 & x_4 & b \\
+%\begin{block}{[cccc|c]}
+%\hlight{1} & 0 & 5 & 0 & 0\\
+%0 & \hlight{1} & 3 & 0 & 0\\
+%0 & 0 & 0 & \hlight{1} & 0\\
+%0 & 0 & 0 & 0 & \hlight{1}\\
+%\end{block}
+%\end{blockarray}.
+%\end{align*}
+%\end{minipage}
+%\begin{minipage}{0.5\textwidth}
+%\begin{align*}
+%x_1+5x_3&=0\\
+%x_2+3x_3&=0\\
+%x_4&=0\\
+%0&\neq 1
+%\end{align*}
+%\end{minipage}
+%%
+%\end{eks}
 Hvis der er pivotindgang i den sidste søjle, så har ligningssystemet ingen løsning.
 %
 De variables søjler, der indeholder pivotindgange, kaldes for \textbf{faste variable}, mens de, som ikke indholder pivotindgange, kaldes for \textbf{frie variable}. 
