--- a/incl/main/simplex_metoden/simplex_metoden.tex
+++ b/incl/main/simplex_metoden/simplex_metoden.tex
@@ -1,1 +1,14 @@
 \chapter{Simplex metoden}
+%
+Simplex-metoden er en metode til at løse lineære optimeringsproblemer.
+Metoden er bygget til at håndterer problemer på standardform.
+mOTIVERENDE Tkst\\\\
+%
+Simplex metoden udfører i grove træk følgende operationer:
+%
+\begin{enumerate}
+\item Et ekstremum $x$ vælges inde for løsningsmængden.
+\item
+\item
+\end{enumerate}
+%
