--- a/incl/main/linear_algebra/span/under_bas_dim.tex
+++ b/incl/main/linear_algebra/span/under_bas_dim.tex
@@ -1,4 +1,4 @@
-\subsection{Underrum}
+\section{Underrum}
 Det kan ofte være belejligt at studere vektorer i en mindre del af $\R^n$, dertil kan der gøres brug af \textbf{underum}.
 \begin{defn}{}{underrum}
 En mængde $W$ bestående af vektorer i $\R^n$ er et underrum til $\R^n$ hvis den opfylder følgende betingelser:	
@@ -38,7 +38,7 @@ Hermed er det bevist at spannet af delmængde af $\R^n$ er et underrum til $\R^n
 \subsubsection{Underrum for matricer}
 I forbindelse med underrum er det nogle udvalgte typer af underrum som er relevante i forbindelse med matricer. Den første der vil blive nævnt er \textbf{nulrummet}.
 \begin{defn}{}{}
-Nulrummet til en matrix $A$ er løsningsmængden til matrixligningen $A\textbf{x}=\textbf{0}$. 
+Nulrummet til en matrix $A$ er løsningsmængden til matrixligningen $A\textbf{x}=\textbf{0}$ og noteres $\text{nul}(A)$. 
 \end{defn}
 Et eksempel nulrummet til en matrix ses i eksempel \ref{nulrum}
 
@@ -69,11 +69,25 @@ Dette vises at nulrummet af A er et underrum af $\R^n$
 \noindent
 En anden type underrum er \textbf{rækkerum} og \textbf{søjlerum}.
 \begin{defn}{}{}
-Rækkerum er spannet som kommer af rækkerne i en matrice.\\
-Søjlerum er spannet af søjlerne i en matrice.
+Rækkerum er spannet som kommer af rækkerne i en matrice noteret $\text{ræk}(A)$.\\
+Søjlerum er spannet af søjlerne i en matrice, noteret $\text{søj}(A)$.
 \end{defn}
 \noindent
 Speciele underrum er også relevant i forbindelse med lineær afbildning.
 Billedmængden af en lineær afbildning er det samme som søjlerummet af dens standard matrix.
 
 \subsection{Basis}
+Mens at et underrum kan beskrives med en given mængde vektorer, så er det smartere at beskrive det med så få vektorer som muligt. Denne mængde kaldes \textbf{basis} for underrummet.
+\begin{defn}{}{}
+Lad $\mathcal{P}$ være et ikke-nul-underrum af $\R^n$. En basis for $\mathcal{P}$ er en lineært uafhængig mængde af generatorer for $\mathcal{P}$.
+\end{defn}
+\noindent
+Eksempelvis kan en mængde af standard vektorer $\{\textbf{e}_1,\textbf{e}_2,\ldots,\textbf{e}_n\}$bruges som basis for $\R^n$.
+Denne type basis kaldes for \textbf{standard basis}, men er ikke den eneste måde at skrive basis for et underrum.\\\\
+Pivot søjlerne i en matrix udgør basis for dens søjlerum. Dette følger af bevis "bevis mangler sætning 2.4 i bogen, bevis er i appendiks E".
+\\\\
+
+
+
+
+
