--- a/incl/main/linear_algebra/span/dim.tex
+++ b/incl/main/linear_algebra/span/dim.tex
@@ -22,4 +22,9 @@ Det betyder derfor generelt, at standard basen for $\R^n$ indeholder $n$ vektore
 \end{tabular}
 \end{center}
 \noindent
-Pivotsøjlerne i enhver matrix danner en basis for dens søjlerum. Derfor er dim$\text{Søj}\text{  } A$ lig med mængden af pivotsøjler i en matrix $A$ og derfor lig med $\text{rang}(A)$. Nulrummets dimension for en matrix 
+Pivotsøjlerne i enhver matrix danner en basis for dens søjlerum. Derfor er dim$\text{Søj}\text{  } A$ lig med mængden af pivotsøjler i en matrix $A$ og derfor lig med $\text{rang}(A)$. Nulrummets dimension for en matrix er givet ved nulliteten af matricen $A$, altså $n-\text{rang} (A)$. Til sidst er det gældende for rækkerummet for en matrix $A$, at dens dimension ligeledes er lig med matricens rang. Da rækkerummet og søjlerummet har samme dimension gælder følgende \\
+\begin{equation}
+\text{dim}(\text{Ræk}\text{  } A)=\text{dim}(\text{Søj}\text{  } A)=\text{dim}(\text{Ræk}\text{  } A^T)
+\end{equation}
+Det medfølger derfor, at rangen af en enhver matrix er lig med rangen af dens transponerede. 
+
