--- a/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
+++ b/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
@@ -9,7 +9,8 @@ En mængde af vektorer i $\R^n$ kan være \textbf{lineært afhængige} eller \te
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 
 \begin{defn}{Lineær afhængighed og lineær uafhængighed}{}
-En mængde af vektorer $\mathbf{u}_1, \mathbf{u}_2, \ldots , \mathbf{u}_k \in \R^n$ kaldes lineært uafhængige, hvis der eksisterer skalarer $x_1, x_2, \ldots , x_k$, sådan at ligningen 
+%En mængde af vektorer $\mathbf{u}_1, \mathbf{u}_2, \ldots , \mathbf{u}_k \in \R^n$ kaldes lineært uafhængige, hvis der eksisterer skalarer $x_1, x_2, \ldots , x_k$, sådan at ligningen 
+En mængde af vektorer $\mathbf{u}_1, \mathbf{u}_2, \ldots , \mathbf{u}_k \in \R^n$ kaldes lineært uafhængige, hvis der for alle skalarer $x_1, x_2, \ldots , x_k$, sådan at ligningen 
 \begin{align*}
 x_1\mathbf{u}_1 + x_2\mathbf{u}_2 + \cdots + x_k \mathbf{u}_k = \mathbf{0}, 
 \end{align*}
