Update stdform.py and mxinvers.tex

--- a/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
@@ -134,11 +134,8 @@ Fra sætning \ref{thm:mxinvers} fremgår det, at $P^{-1}$ er en invertibel matri
 %find begin example
 \\
 Det er fordelagtigt at benytte algoritmer til at invertere matricer. Lad $A$ være en $n \times n$ matrix. 
-Givet et input
-$[A \text{   } I_n].
-$
-skal algoritmen udføre elementære rækkeoperationer på $A$, således algoritmens output bliver
-$[R \text{   } B].
+Givet et input $[A \text{   } I_n]$, skal algoritmen udføre elementære rækkeoperationer på $A$, således algoritmens output bliver
+$[R \text{   } B]
 $,
 hvor $R$ er $A$ på reduceret trappeform. 
 Hvis $R=I_n$, er $A$ invertibel og $B=A^{-1}$.
