Update apend_a.tex, loesning_til_lineaer.tex, and master.tex

--- a/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
+++ b/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
@@ -163,7 +163,7 @@ Jævnfør definition \ref{defn:redtrap} er $A$ på reduceret trappeform.
 %
 %Motiverende tekst
 %
-\begin{thm}{}{}
+\begin{thm}{}{entydig}
 Enhver matrix kan, ved hjælp af elementære rækkeoperationer, kun blive omdannet til en entydig matrix på reduceret trappeform.
 \end{thm}
 %
