--- a/master.tex
+++ b/master.tex
@@ -79,7 +79,7 @@
 % Appendicer indsættes inde i en appendices-blok og bliver nummereret med
 % bogstaver i stedet for tal
 \begin{appendices}
-
+\input{incl/main/appendicer/apend_a}
 \end{appendices}
 
 % Dokumentets 'back matter' er til ekstra ting som f.eks. litteraturlisten.
