Update articles.bib, books.bib, and linear_algebra.tex

--- a/incl/bib/books.bib
+++ b/incl/bib/books.bib
@@ -25,3 +25,19 @@
   year      = {2014},
   edition   = {2nd}
 }
+
+@Book{lay,
+  title     = {Linear Algebra an Its Applications},
+  author    = {David C. Lay},
+  publisher = {Pearson},
+  year      = {2016},
+  edition   = {3nd}
+}
+%
+@Book{bert,
+  title     = {Introduction to linear optimization},
+  author    = {Dimitrix Bertsimas and John N. Tsitsiklis},
+  publisher = {Publisher's Cataloging-in-Puplication Data},
+  year      = {1997},
+  edition   = {1nd}
+}
