--- a/incl/main/linear_algebra/linear_algebra.tex
+++ b/incl/main/linear_algebra/linear_algebra.tex
@@ -1,5 +1,8 @@
 \chapter{Lineær algebra}
 %
+Lineær algebra bla bla indledende tekst - Rasmus
+Dette kapitel tager udgangspunkt i \citep[side x-x]{lial}, hvis ikke andet er angivet 
+%
 \input{incl/main/linear_algebra/matricer_vektorer/matricer.tex}
 	% Matricer og vektorer
 	\input{incl/main/linear_algebra/matricer_vektorer/specmatricer.tex}
