--- a/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
+++ b/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
@@ -227,3 +227,10 @@ Hvis der er pivotindgang i den sidste søjle, så har ligningssystemet ingen lø
 %
 De variables søjler, der indeholder pivotindgange, kaldes for \textbf{faste variable}, mens de, som ikke indholder pivotindgange, kaldes for \textbf{frie variable}. 
 Ligningssystemet kan løses for de faste variable udtrykt ved de frie variable. 
+
+\begin{thm}{}{pivotu}
+Følgende udsagn er sande for enhver matrix $A$: 
+\itemize 
+\item (a) Pivotsøjlerne i $A$ er lineær uafhængige. 
+\item (b) Enhver ikke-pivot søjle i $A$ er en linarkombination af den forrige pivotsøjle i A, hvor koefficienterne i linearkombinationen er indgangene i den tilsvarende søjle i den reducerede trappeform af $A$. 
+\end{thm}
