Update apend_a.tex and loesning_til_lineaer.tex

--- a/incl/main/appendicer/apend_a.tex
+++ b/incl/main/appendicer/apend_a.tex
@@ -1,2 +1,33 @@
-\chapter{Bevis for \ref{thm:entydig} og andet}
-iogjroai
+\chapter{Vigtige beviser}
+
+\begin{thm}{}{}
+Lad $A$ være en matrix med den reducerede trappeform $R$. Så er følgende sandt:
+\begin{enumerate}[label=(\alph*)]
+\item  Hvis en søjle j i $A$ er en linearkombination  af andre søjler i $A$, så er søjlen i $R$ en linearkombination af de tilsvarende søjler i $R$ med de samme koefficienter.
+\item  Hvis en søjle j i $R$ er en linearkombination  af andre søjler i $R$, så er søjlen i $A$ en linearkombination af de tilsvarende søjler i $A$ med de samme koefficienter.
+\end{enumerate}
+\end{thm}%
+\begin{proof}
+
+\end{proof}
+
+
+\begin{thm}{}{entydig}
+Enhver matrix kan, ved hjælp af elementære rækkeoperationer, kun blive omdannet til en entydig matrix på reduceret trappeform.
+\end{thm}
+%
+\begin{proof}
+Lav - se Appendix E i bogen
+\end{proof}
+
+
+
+\begin{thm}{}{pivotu}
+Følgende udsagn er sande for enhver matrix $A$: 
+\itemize 
+\item (a) Pivotsøjlerne i $A$ er lineær uafhængige. 
+\item (b) Enhver ikke-pivot søjle i $A$ er en linarkombination af den forrige pivotsøjle i A, hvor koefficienterne i linearkombinationen er indgangene i den tilsvarende søjle i den reducerede trappeform af $A$. 
+\end{thm}
+\begin{proof}
+noget
+\end{proof}
