--- a/incl/main/appendicer/apend_a.tex
+++ b/incl/main/appendicer/apend_a.tex
@@ -1,6 +1,6 @@
 \chapter{Vigtige beviser}
 
-\begin{thm}{}{}
+\begin{thm}{}{redutrap}
 Lad $A$ være en matrix med den reducerede trappeform $R$. Så er følgende sandt:
 \begin{enumerate}[label=(\alph*)]
 \item  Hvis en søjle j i $A$ er en linearkombination  af andre søjler i $A$, så er søjlen i $R$ en linearkombination af de tilsvarende søjler i $R$ med de samme koefficienter.
@@ -8,26 +8,44 @@ Lad $A$ være en matrix med den reducerede trappeform $R$. Så er følgende sand
 \end{enumerate}
 \end{thm}%
 \begin{proof}
+I følgde sætning \ref{thm:eleinv}, så gælder det, at der findes en invertibel matrix $P$, så $PA=R$. Deraf gælder $P\textbf{a}_i=\textbf{r}_i$ for alle $i$. Antag, at søjlen $j$. i $A$ er en linearkombination af de andre søjler i $A$. Så findes skalarer $c_1,c_2,\ldots,c_k$, så det gælder at \\
+\begin{equation}
+\textbf{a}_j=c_1\textbf{a}_1+c_2\textbf{a}_2+\cdots+c_k\textbf{a}_k.
+\end{equation}
+Derfor 
+\begin{align*}
+\textbf{r}_j=P\textbf{a}_j&=P(c_1\textbf{a}_1+c_2\textbf{a}_2+\cdots+c_k\textbf{a}_k) \\
+&= c_1P\textbf{a}_1+c_2P\textbf{a}_2+\cdots+c_kP\textbf{a}_k\\
+&= c_1\textbf{r}_1+c_2\textbf{r}_2+\cdots+c_k\textbf{r}_k
+\end{align*}
+Beviset for (b) er lignende ved at benytte $\textbf{r}_i=P^-1\textbf{a}_i.$
+\end{proof} \\
+%
+Heraf kan der en række egenskaber ved en matrix på reducerede trappeform, som kommer af foregående bevis samt definitioner og sætninger, som er gennemgået i rapporten: \\\\
+%
+Lad $R$ være en $m \times n$ matrix på reduceret trappeform. Så gælder følgende egenskaber
+\begin{enumerate}[label=(\alph*)]
+\item En søjle i $R$ er en pivotsøjle, hvis og kun hvis, den er ikke-nul og ikke er en linearkombination af de foregående søjler i $R$. 
+\item Den $j$'te pivotsøjle i $R$ er den $j$'te standard i $\R^m$, $\textbf{e}_j$, og derfor er pivotsøjlerne i $R$ lineært uafhængige. 
+\item Antag at $\textbf{r}_j$ ikke er en pivotsøjle i $R$, og at der er $k$ pivotsøjler i $R$ før $\textbf{r}_j$. Så gælder det, at $\textbf{r}_j$ er en linearkombination af de $k$ forudgående pivotsøjler og koefficienterne er de $k$-første indgange i $\textbf{r}_j$. 
+\end{enumerate}
 
-\end{proof}
+Det forudgående kan opskrives som følgende sætning, som bruges til bevis \ref{entydigbevis}.
 
+\begin{thm}{}{pivotu}
+Følgende udsagn er sande for enhver matrix $A$: 
+\begin{enumerate}[label=(\alph*)]
+\item Pivotsøjlerne i $A$ er lineær uafhængige. 
+\item Enhver ikke-pivot søjle i $A$ er en linarkombination af den forrige pivotsøjle i A, hvor koefficienterne i linearkombinationen er indgangene i den tilsvarende søjle i den reducerede trappeform af $A$. 
+\end{enumerate} 
+\end{thm}
 
 \begin{thm}{}{entydig}
 Enhver matrix kan, ved hjælp af elementære rækkeoperationer, kun blive omdannet til en entydig matrix på reduceret trappeform.
 \end{thm}
 %
-\begin{proof}
-Lav - se Appendix E i bogen
-\end{proof}
-
-
-
-\begin{thm}{}{pivotu}
-Følgende udsagn er sande for enhver matrix $A$: 
-\itemize 
-\item (a) Pivotsøjlerne i $A$ er lineær uafhængige. 
-\item (b) Enhver ikke-pivot søjle i $A$ er en linarkombination af den forrige pivotsøjle i A, hvor koefficienterne i linearkombinationen er indgangene i den tilsvarende søjle i den reducerede trappeform af $A$. 
-\end{thm}
-\begin{proof}
-noget
+\begin{proof}\label{entydigbevis}
+I følgende bevis refereres der til de tidligere egenskaber for en matrix på reduceret trappeform. \\
+Lad $A$ væære en matrix og $R$ være den reduceret trappeform af $A$. Udfra egenskab (a), så gælder det, at en søjle i $R$ er en pivotsøjle i $R$, hvis og kun hvis, den er ikke-nul og ikke er en linearkombination af de forudgående pivotsøjler i $R$. Jævnfør \ref{thm:redutrap} gælder det, at hvis en søjle i $R$ er en pivotsøjle, så er den ikke en linearkombination af de forudgående søjler i $R$ og deraf er søjlen i $A$ heller ikke en linearkombination af de forudgående  søjler i $A$, hvilket betyder at positionerne af pivotsøjlerne i $R$ er entydigt bestemt af søjlerne i $A$. Endvidere gælder det, udfra egenskab (b), at den $j$-te pivotsøjle i $R$ er den $j$-te standardvektor i $\R^m$, og derfor er pivotsøjlerne i $R$ endvidere entydigt bestemt af søjlerne i $A$. \\
+Dernæst bevises, at ikke-pivotsøjlerne i $R$ også er bestemt af søjlerne i $A$. Antag, at $\textbf{r}_j$ ikke er en pivotsøjle i $R$. Hvis $\textbf{r}_j=\textbf{0}$ medfører $\textbf{a}_j$=$\textbf{0}$ jævnfør sætning \ref{thm:redutrap}. Antag så at $\textbf{r}_j \neq \textbf{0}$, så gælder det, udfra egenskab(c), så er $\textbf{r}_j$ en linarkombination af de forudgående pivotsøjler i $R$, som er lineær uafhængig. Det gælder endvidere, at kofficienterne i linearkombination er de første indgange i $\textbf{r}_j$, hvor der er en koefficient for hver forudgående pivotsøjle, hvor de resterende indgange er nul. Jævnfør sætning \ref{thm:redutrap}, så er $\textbf{a}_j$ også en linearkombination af de forudgående pivotsøjler i $A$, som også er lineær uafhængig og har de samme koefficienter, som afhænger af $A$. Derfor er $\textbf{r}_j$ entydigt bestemt af $A$ og konkludere deraf, at $R$ er entydig bestemt af $A$. 
 \end{proof}
